fixed spacing in nav

--- a/style.css
+++ b/style.css
@@ -583,21 +583,22 @@ img.social-button {
 
     /*NAV*/
     div#nav-logo {
-        font-size: 1.2rem;
-        line-height: 1.5rem;
+        font-size: 1.4rem;
+        line-height: 1.1rem;
     }
 
     ul#nav-links {
-        margin-left: 60px;
+        margin-left: 10px;
+        margin-right: 0;
     }
 
     ul#nav-links li{
-        margin-left: 30px;
+        margin-left: 5px;
     }
 
     ul#nav-links li a{
         font-size: 0.8rem;
-        padding-right: 5px;
+        margin-left: 5px;
     }
 
     /*    HEADER*/
